base/fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-fe-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: reservation-fe
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reservation-fe
    spec:
      containers:
      - name: reservation-fe
        image: scgskku/reservation-fe
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
