base/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: reservation-fe-service
spec:
    ports:
        - port: 80
          targetPort: 3000
          protocol: TCP
    selector:
        app.kubernetes.io/name: reservation-fe
